# job-relevancy-chrome-extension

./: .gitignore  .llmignore  Readme.md
app/extension-frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/extension-frontend/public/: content-loader.js  manifest.json  overlay-loader.js
app/extension-frontend/src/: App.css  App.tsx  MainApp.tsx  background.ts  content.ts  index.css  modal.tsx  overlay.tsx  types.ts
app/extension-frontend/src/api/: resumeApi.ts
app/server-backend/: main.py  pyproject.toml
app/server-backend/app/: config.py  database.py  logging_config.py  schemas.py  security.py  services.py
app/server-backend/app/routers/: analysis.py  applications.py  auth.py  autofill.py  cover_letter.py  interview_rounds.py  interviews.py  live_interview.py  live_interview_session.py  outreach.py  resumes.py  tailor.py  users.py
app/server-backend/app/services/: gcs_service.py  live_session_service.py  llm_service.py  pdf_service.py  resume_service.py  tailoring_service.py
app/server-backend/app/services/llm/: analysis_service.py  autofill_service.py  cover_letter_service.py  extraction_service.py  interview_service.py  report_service.py  tailoring_service.py
app/server-backend/app/templates/: cover_letter_template.tex  debug_template.tex  resume_style.cls  resume_template.tex
app/web-dashboard/: package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
app/web-dashboard/src/app/: globals.css  (+3 more)
app/worker/outreach-gcf-worker/: .gcloudignore  main.py  outreach_gcf.py  requirements.txt
(+61 files in other folders)
